--- a/main.scss
+++ b/main.scss
@@ -29,50 +29,53 @@ body {
   .span-text {
     letter-spacing: 1px !important;
   }
-  .default-bg.active {
-    background-color: $default-color !important;
-    border: none !important;
-    color: white !important;
-    .default-bg {
-      border: 1px solid $primary-color !important;
-      color: $default-color !important;
+  .default-bg {
+    border: 1px solid $default-color !important;
+    color: $default-color !important;
+    &.active {
+      background-color: $default-color !important;
+      border: none !important;
+      color: white !important;
     }
   }
 
-  .border-primary.active {
-    background-color: $primary-color !important;
-    color: white !important;
-    .border-primary {
-      border: 1px solid $primary-color !important;
-      color: $danger-color !important;
+  .border-primary {
+    border: 1px solid $primary-color !important;
+    color: $primary-color !important;
+    &.active {
+      background-color: $primary-color !important;
+      color: white !important;
+      border: none !important;
     }
   }
 
-  .border-success.active {
-    background-color: $success-color !important;
-    color: #fff !important;
-    border: none !important;
-    .border-success {
-      border: 1px solid $success-color !important;
-      color: $success-color !important;
+  .border-success {
+    border: 1px solid $success-color !important;
+    color: $success-color !important;
+    &.active {
+      background-color: $success-color !important;
+      color: #fff !important;
+      border: none !important;
     }
   }
-  .border-danger.active {
-    background-color: $danger-color !important;
-    color: #fff !important;
-    border: none !important;
-    .border-danger {
-      border: 1px solid $danger-color !important;
-      color: $danger-color !important;
+
+  .border-danger {
+    border: 1px solid $danger-color !important;
+    color: $danger-color !important;
+    &.active {
+      background-color: $danger-color !important;
+      color: #fff !important;
+      border: none !important;
     }
   }
-  .border-info.active {
-    background-color: $info-color !important;
-    color: #fff !important;
-    border: none !important;
-    .border-info {
-      border: 1px solid $info-color !important;
-      color: $info-color !important;
+
+  .border-info {
+    border: 1px solid $info-color !important;
+    color: $info-color !important;
+    &.active {
+      background-color: $info-color !important;
+      color: #fff !important;
+      border: none !important;
     }
   }
 }
