update sass theming

--- a/main.css
+++ b/main.css
@@ -60,4 +60,6 @@ section .card .main-text {
 section .card button {
   background-color: #08333f !important;
   letter-spacing: 1px !important;
-}/*# sourceMappingURL=main.css.map */
+}
+
+/*# sourceMappingURL=main.css.map */
