--- a/main.css
+++ b/main.css
@@ -54,8 +54,9 @@ body {
 
 section .card .card-title,
 section .card h4,
-section .card .main-text {
+section .card .main-text, section .card svg {
   color: #08333f !important;
+  fill: #08333f !important;
 }
 section .card button {
   background-color: #08333f !important;
